--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   provider: ^6.1.1
   flutter_bloc: ^8.1.3
-  flutter_dotenv:
+  flutter_dotenv: ^5.1.0
   connectivity_plus: ^5.0.2
   flutter_image_compress: ^2.1.0
   workmanager: ^0.5.2
+  universal_html: ^2.2.4
   
  
   
