--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_image_compress: ^2.1.0
   workmanager: ^0.5.2
   universal_html: ^2.2.4
+  flutter_web_plugins:
+    sdk: flutter
   
  
   
