--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "fresh_walls",
-    "short_name": "fresh_walls",
+    "name": "Fresh Walls",
+    "short_name": "Fresh Walls",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "A beautiful wallpaper application",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
