--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.1.0
   cached_network_image: ^3.3.0
-  flutter_cache_manager: ^3.3.1
+  flutter_cache_manager:
   flutter_wallpaper_manager: ^0.0.4
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
